data/all_generated_tests/raw_wast_tests/call_indirect_IncorrectConditionEvaluation_4355.wast
;; 4. **Test Description**: Call an indirect function with the expectation of it causing a trap, surrounded by `br_if` to check if the condition evaluation detects the trap as intended.      **Specific Constraint**: Detecting traps and interpreting these events accurately.      **Incorrect Condition Evaluation**: Evaluate if `br_if` condition behaves correctly around trapping conditions.

(assert_invalid
  (module
    (type (func))
    (table 1 funcref)
    (func $trap-check-func
      (block 
        (br_if 0 
          (call_indirect (type 0) (i32.const 1))
        )
      )
    )
  )
  "type mismatch in call_indirect within br_if"
)